# backend

./: .dockerignore  .gitignore  AI_SERVER_API_SPEC.md  Dockerfile  OPEN_API_DOCS.md  alembic.ini  api.py  appspec.yml  check_db.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  simple_test.py  test_api_robustwide.py  test_mask_simple.py  test_robustwide_mask.py
.github/workflows/: docker-build.yml
app/: background_tasks.py  config.py  db.py  db_lifespan.py  models.py  scheduler.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 1b4252a86b93_init.py  473b2a163fbf_del_image_dir.py  bf1b87f8650b_add_user_report_fields_to_validation_.py
app/services/: auth_service.py  email_service.py  image_service.py  storage_service.py  user_service.py  validation_service.py
deploy/: docker-compose.yml  ecr-login.sh  start.sh
deploy/nginx/conf/: default.conf
migrations/: add_api_key_column.sql
scripts/: start_application.sh  stop_application.sh  validate_service.sh
