[project]
name = "aegis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncmy>=0.2.10",
    "bcrypt<4.1.0",
    "boto3>=1.39.15",
    "databases>=0.9.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "galois>=0.4.6",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "numpy>=2.2.6",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
